--- a/analisis/codigos/visualizacion_produccion_y_precios.Rmd
+++ b/analisis/codigos/visualizacion_produccion_y_precios.Rmd
@@ -26,6 +26,7 @@ gc()
 
 # configuración de impresión
 knitr::opts_chunk$set(echo = TRUE)
+options(warn = -1) 
 
 # bibliotecas
 library(data.table)
